docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/chip.mdx
---
title: Chip
description: Jetpack Compose Chip components for displaying compact elements.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Chips match the official Jetpack Compose [Chip API](https://developer.android.com/develop/ui/compose/components/chip). Each chip type is a separate component: `AssistChip`, `FilterChip`, `InputChip`, and `SuggestionChip`.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/chip/android-light.webp"
  darkSrc="/static/images/expo-ui/chip/android-dark.webp"
  alt="Filter, assist, and suggestion Material 3 chips"
/>

## Installation

<APIInstallSection />

## Usage

### Assist chip

Assist chips help users take actions or start tasks, such as booking a flight or opening a map. They often appear as temporary UI elements in response to user input.

<ComponentExample
  title="AssistChipExample.tsx"
  src="/static/images/expo-ui/examples/chip-assist-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/chip-assist-android-dark.webp"
  alt="An outlined assist chip with an airplane icon and the label Book flight">

```tsx
import {
  Host,
  AssistChip,
  Icon,
  Text,
} from '@expo/ui/jetpack-compose';

export default function AssistChipExample() {
  return (
    <Host matchContents>
      <AssistChip
        onClick={() => console.log('Opening flight booking...')}>
        <AssistChip.Label>
          <Text>Book flight</Text>
        </AssistChip.Label>
        <AssistChip.LeadingIcon>
          <Icon source={require('./assets/flight.xml')} size={18} />
        </AssistChip.LeadingIcon>
      </AssistChip>
    </Host>
  );
}
```

</ComponentExample>

### Filter chip

Filter chips allow users to refine content from a set of options. They support a selected state and are commonly used in search bars or content filtering.

<ComponentExample
  title="FilterChipExample.tsx"
  src="/static/images/expo-ui/examples/chip-filter-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/chip-filter-android-dark.webp"
  alt="A filter chip labeled Images shown in its selected filled state">

```tsx
import { useState } from 'react';
import { Host, FilterChip, Text } from '@expo/ui/jetpack-compose';

export default function FilterChipExample() {
  const [selected, setSelected] = useState(false);

  return (
    <Host matchContents>
      <FilterChip
        selected={selected}
        onClick={() => setSelected(!selected)}>
        <FilterChip.Label>
          <Text>Images</Text>
        </FilterChip.Label>
      </FilterChip>
    </Host>
  );
}
```

</ComponentExample>

### Input chip

Input chips represent discrete pieces of information entered by a user, such as tags in a text field. They support avatars, trailing icons, and can be dismissed.

<ComponentExample
  title="InputChipExample.tsx"
  src="/static/images/expo-ui/examples/chip-input-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/chip-input-android-dark.webp"
  alt="Three input chips labeled Work, Travel, and News, each with a close icon">

```tsx
import { useState } from 'react';
import {
  Host,
  InputChip,
  Icon,
  Text,
  FlowRow,
} from '@expo/ui/jetpack-compose';

export default function InputChipExample() {
  const [chips, setChips] = useState(['Work', 'Travel', 'News']);

  return (
    <Host matchContents>
      <FlowRow horizontalArrangement={{ spacedBy: 8 }}>
        {chips.map(label => (
          <InputChip
            key={label}
            selected
            onClick={() =>
              setChips(prev => prev.filter(c => c !== label))
            }>
            <InputChip.Label>
              <Text>{label}</Text>
            </InputChip.Label>
            <InputChip.TrailingIcon>
              <Icon
                source={require('./assets/close.xml')}
                size={18}
              />
            </InputChip.TrailingIcon>
          </InputChip>
        ))}
      </FlowRow>
    </Host>
  );
}
```

</ComponentExample>

### Suggestion chip

Suggestion chips help narrow a user's intent by presenting dynamically generated suggestions, such as quick-reply options in a chat or search refinements.

<ComponentExample
  title="SuggestionChipExample.tsx"
  src="/static/images/expo-ui/examples/chip-suggestion-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/chip-suggestion-android-dark.webp"
  alt="An outlined suggestion chip labeled Nearby">

```tsx
import {
  Host,
  SuggestionChip,
  Text,
} from '@expo/ui/jetpack-compose';

export default function SuggestionChipExample() {
  return (
    <Host matchContents>
      <SuggestionChip
        onClick={() => console.log('Searching nearby...')}>
        <SuggestionChip.Label>
          <Text>Nearby</Text>
        </SuggestionChip.Label>
      </SuggestionChip>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  AssistChip,
  FilterChip,
  InputChip,
  SuggestionChip,
} from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/chip"
  apiName="Chip"
/>
